--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ nav ul li a:hover::after{
 
 .work img{
     width: 100%;
+    height: 100%;
     border: 1px solid #b54769;
     border-radius: 10px;
     display: block;
